--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.sliderImg{
+  top: 0px;
+  left: 0px;
+  width: 1920px;
+  height: 1080px;
+  background: #0000005C 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  opacity: 1;
+}
