--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -259,7 +259,7 @@
   /* Perks section */
   .gap-container{
     width: 1920px;
-    height: 200px;
+    height: 100px;
     background-color:white;
   }
   .perks-background{
@@ -273,4 +273,163 @@
     border-bottom-width: 150px;
     border-bottom-style: dashed;
   }
-  
+  .perks-title{
+    top: 3560px;
+    left: 174px;
+    width: 282px;
+    height: 88px;
+    text-align: left;
+    font: normal normal bold 74px/90px Helvetica Neue;
+    letter-spacing: 7.4px;
+    color: #FFFFFF;
+    opacity: 1;
+  }
+  .perks-content{
+    top: 3759px;
+    left: 188px;
+    width: 383px;
+    height: 185px;
+    text-align: left;
+    font: normal normal bold 51px/62px Helvetica Neue;
+    letter-spacing: 5.1px;
+    
+    opacity: 1;
+  }
+  .perks-content2{
+    top: 3972px;
+    left: 188px;
+    width: 433px;
+    height: 163px;
+    text-align: left;
+    font: normal normal normal 35px/41px Helvetica Neue;
+    letter-spacing: 3.5px;
+    color: #FFFFFF;
+    opacity: 1;
+  }
+  .line{
+    height:2px;
+    border:none;
+    width:300px;
+    margin-left:7px;
+  }
+  .perks-tryitnow{
+    position: absolute;
+    top:10%;
+    left:78%;
+    width: 284px;
+    height: 79px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background: transparent linear-gradient(90deg, #1FE1E9 0%, #5E33D1 34%, #D34848 65%, #FFB33F 100%) 0% 0% no-repeat padding-box;
+    font-size: 16px;
+    border-radius: 79px;
+    /* padding: 12px 24px; */
+    text-align: center;
+    border:transparent;
+  }
+  /* review section */
+  .review-background{
+    position: relative;
+    width: 1920px;
+    height: 1080px;
+    background-color: #1FE1E9;
+    display: flex;
+    flex-direction: row;
+  }
+  .review-text{
+    top: 100px;
+    width: 773px;
+    height: 88px;
+    text-align: left;
+    font: normal normal bold 74px/90px Helvetica Neue;
+    letter-spacing: 7.4px;
+    color: #FFFFFF;
+    opacity: 1;
+    margin-top:200px;
+  }
+  .star-review{
+    font-size: 50px;
+  }
+  .review-small-content{
+    top: 5032px;
+    width: 142px;
+    height: 42px;
+    text-align: left;
+    font: normal normal bold 35px/43px Helvetica Neue;
+    letter-spacing: 3.5px;
+    color: #FFFFFF;
+    opacity: 1;
+
+  }
+  .review-small-content2{
+    top: 5098px;
+    width: 308px;
+    height: 122px;
+    text-align: left;
+    font: normal normal normal 35px/41px Helvetica Neue;
+    letter-spacing: 3.5px;
+    color: #191919;
+    opacity: 1;
+  }
+  .btn-review-tryitnow{
+    margin-top: 30px;
+    position: relative;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background:#FFFFFF 0% 0% no-repeat padding-box;
+    padding: 1em 2em;
+    border: none;
+    color: #1FE1E9;
+    font-size: 1.2em;
+    font: normal normal bold 20px/25px Helvetica Neue;
+    cursor: pointer;
+    outline: none;
+    overflow: hidden;
+    border-radius: 79px;
+  }
+  /* get exp section */
+  .get-background{
+    position: relative;
+    width: 1920px;
+    height: 814px;
+    background-color:black;
+    display: flex;
+    flex-direction: column;
+  }
+  .get-text{
+    margin-top:20%;
+    margin-left:100px;
+    width: 1000px;
+    height: 88px;
+    text-align: left;
+    font: normal normal bold 74px/90px Helvetica Neue;
+    letter-spacing: 5px;
+    color: #D34848;
+    opacity: 1;
+  }
+  .get-text2{
+    margin-left:100px;
+    width: 941px;
+    height: 60px;
+    text-align: left;
+    font: normal normal normal 51px/61px Helvetica Neue;
+    letter-spacing: 5.1px;
+    color: #FFFFFF;
+    opacity: 1;
+  }
+.get-tryitnow{
+    position: absolute;
+    top:50%;
+    left:1500px;
+    width: 284px;
+    height: 79px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background: transparent linear-gradient(90deg, #1FE1E9 0%, #5E33D1 34%, #D34848 65%, #FFB33F 100%) 0% 0% no-repeat padding-box;
+    font-size: 16px;
+    border-radius: 79px;
+    /* padding: 12px 24px; */
+    text-align: center;
+    border:transparent;
+}
