--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -136,7 +136,7 @@
 .yellow-text{
 
     width: 814px;
-    height: 88px;
+    height: 200px;
     text-align: left;
     font: normal normal bold 74px/90px Helvetica Neue;
     letter-spacing: 7.4px;
@@ -144,10 +144,15 @@
     opacity: 1;
     margin-left:100px;
     margin-top:200px;
-    margin-bottom:13%;
+}
+.yellow-text:hover{
+  height: 200px;
+    background: -webkit-radial-gradient(#eee, rgb(104, 158, 17),rgb(17, 113, 158));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .yellow-text2{
-    top: 2621px;
+    top: 2000px;
     left: 900px;
     width: 831px;
     height: 121px;
@@ -158,7 +163,11 @@
     opacity: 1;
     margin-left:100px;
 }
-
+.yellow-text2:hover{
+    background: -webkit-radial-gradient(#eee, rgb(52, 75, 14),rgb(47, 60, 66));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .btn-yellow-tryitnow {
     margin-top: 95px;
     margin-left: 750px;
