--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -167,6 +167,7 @@
     background: -webkit-radial-gradient(#eee, rgb(52, 75, 14),rgb(47, 60, 66));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
 }
 .btn-yellow-tryitnow {
     margin-top: 95px;
@@ -206,10 +207,12 @@
   .btn-yellow-tryitnow:hover::before {
     --size: 400px;
   }
+ 
   
   .img-container {
     position: relative;
     width: 50%;
+    
   }
   
   .circle-img {
@@ -218,6 +221,7 @@
     height: 250px;
     overflow: hidden;
     border-radius: 50%;
+    
   }
   .overlay {
     position: absolute;
@@ -236,6 +240,7 @@
   
   .img-container:hover .overlay {
     opacity: 0;
+    
   }
   
   .text {
@@ -282,6 +287,7 @@
     border-bottom-width: 150px;
     border-bottom-style: dashed;
   }
+
   .perks-title{
     top: 3560px;
     left: 174px;
@@ -303,6 +309,8 @@
     letter-spacing: 5.1px;
     
     opacity: 1;
+    /* cursor:url(./img/circle.png),auto; */
+    
   }
   .perks-content2{
     top: 3972px;
@@ -442,3 +450,4 @@
     text-align: center;
     border:transparent;
 }
+ 
