--- a/src/components/CircleNav.css
+++ b/src/components/CircleNav.css
@@ -1,4 +1,3 @@
-
   .logo{
     padding-left: 5px;
     padding-top: 5px;
@@ -13,8 +12,9 @@
 }
   .circular-menu {
     position: fixed;
-    bottom: 1em;
-    right: 1em;
+    top: 2em;
+    margin-left: 0em;
+    z-index: 2;
   }
   
   .circular-menu .floating-btn {
@@ -124,11 +124,11 @@
   }
   
   .circular-menu.circular-menu-left .floating-btn {
-    background-color: hsl(217, 89%, 61%);
+    background-color: hsl(172, 94%, 87%);
   }
   
   .circular-menu.circular-menu-left:after {
-    background-color: hsl(217, 89%, 61%);
+    background-color: hsl(218, 58%, 81%);
   }
   
   .circular-menu.circular-menu-left.active .floating-btn i {
@@ -136,20 +136,35 @@
   }
   
   .circular-menu.circular-menu-left.active .menu-item:nth-child(1) {
-    transform: translate3d(-1em,-7em,0);
+    transform: translate3d(-0.5em,7em,0);
   }
   /*
   .circular-menu.active .menu-item:nth-child(4) {
     transform: translate3d(-7em,1em,0);
   }*/
   .circular-menu.circular-menu-left.active .menu-item:nth-child(2) {
-    transform: translate3d(3.5em,-6.3em,0);
+    transform: translate3d(3.5em,6.3em,0);
   }
   
   .circular-menu.circular-menu-left.active .menu-item:nth-child(3) {
-    transform: translate3d(6.5em,-3.2em,0);
+    transform: translate3d(6.5em,3.2em,0);
   }
   
   .circular-menu.circular-menu-left.active .menu-item:nth-child(4) {
-    transform: translate3d(7em,1em,0);
+    transform: translate3d(7em,-1em,0);
   }
+  .circle-logo-content{
+    padding-left: 76px;
+    margin-top: -110px;
+    left: 177px;
+    width: 235px;
+    height: 56px;
+    text-align: left;
+    font-size: 30px;
+    letter-spacing: 4.8px;
+    color: #FFFFFF;
+    opacity: 1;
+}
+.circle-logo-content.active{
+    opacity: 0;
+}
